Fix time interval
